# fitbit-mcp

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  cli.py  glama.json  pyproject.toml
.github/workflows/: ci.yml
config/: fitbit_config.example.json
scripts/: check-no-data.sh
src/fitbit_mcp/: api.py  auth.py  cli.py  config.py  db.py  helpers.py  importer.py  mcp_instance.py
src/fitbit_mcp/tools/: activity_tools.py  analysis_tools.py  azm_tools.py  breathing_rate_tools.py  cardio_fitness_tools.py  devices_tools.py  exercise_tools.py  food_tools.py  heart_tools.py  hrv_tools.py  lifetime_stats_tools.py  sleep_tools.py  spo2_tools.py  sync_tools.py  temperature_tools.py  weight_tools.py
tests/: conftest.py  test_analysis.py  test_api.py  test_auth.py  test_cli.py  test_config.py  test_db.py  test_fetch_live.py  test_helpers.py  test_importer.py  test_sync.py  test_tools.py
